Completed Dice Challenge

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p>Player 2</p>
         <img class="img2" src="" />
       </div>
+      <h6>Refresh Page To Play</h6>
     </div>
 
     <script src="script.js"></script>
